--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -14,6 +14,7 @@
             rel="stylesheet"
     >
     <link rel="apple-touch-icon" href="logo192.png"/>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SupplyIt</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
