--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -9,10 +9,16 @@
             name="description"
             content="Web site created using create-react-app"
     />
-    <link
+    <!-- <link
             href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
             rel="stylesheet"
-    >
+    > -->
+    <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+    />
     <link rel="apple-touch-icon" href="logo192.png"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!--
