--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -9,6 +9,8 @@
             name="description"
             content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <!-- <link
             href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
             rel="stylesheet"
