several aesthetic, minor functional changes

--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Supply It - Where Suppliers and Retailers meet."
     />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
 
     <!-- <link
             href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
@@ -21,6 +22,8 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
     <link rel="apple-touch-icon" href="logo192.png"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!--
